# testing_crewai

./: README.md  agent_framework.ipynb  env.example  example_usage.py  pyproject.toml  requirements.txt  setup.py
.kiro/specs/framework-validation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
reports/: audit_data_20250719_132713.json  audit_data_20250719_132950.json  audit_data_20250719_133251.json  audit_data_20250719_133821.json  audit_report_20250719_132713.md  audit_report_20250719_132950.md  audit_report_20250719_133251.md  audit_report_20250719_133821.md
src/: __init__.py  __main__.py  agents.py  cli.py  example_calculator.py  framework.py  llm_config.py  models.py
src/reports/: audit_data_20250719_132100.json  audit_data_20250719_132154.json  audit_data_20250719_132528.json  audit_report_20250719_132100.md  audit_report_20250719_132154.md  audit_report_20250719_132528.md
tests/: mock_llm_provider.py  test_calculator_basic.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_api_interface.py  test_cli_interface.py  test_error_handling.py  test_existing_test_enhancement.py
